# langchain_chatbot_rag

./: .gitignore  README.md  html_templates.py  main.py  pyproject.toml  scraper.py
data/: articles.csv  blog_description.txt
db/: index.pkl
src/modules/: scraper.py
